[package]
name = "polyfill-rs"
version = "0.3.0"
edition = "2021"
authors = ["Julius Tranquilli <jtranqs@gmail.com>"]
description = "The Fastest Polymarket Client On The Market."
license = "MIT OR Apache-2.0"
repository = "https://github.com/floor-licker/polyfill-rs"
readme = "README.md"
keywords = ["polymarket", "clob", "trading", "prediction-market", "crypto"]
categories = ["api-bindings", "network-programming"]
documentation = "https://docs.rs/polyfill-rs"
homepage = "https://github.com/floor-licker/polyfill-rs"
[dependencies]
# Async runtime and futures
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream", "gzip"] }
hickory-resolver = "0.25"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.17"
dotenvy = "0.15"

# Ethereum and crypto
alloy-primitives = "1.5.4"
alloy-sol-types = { version = "1.5.4", features = ["eip712-serde", "json"] }
alloy-signer = { version = "1.6", features = ["eip712"] }
alloy-signer-local = { version = "1.6", features = ["eip712"] }

# Numeric types
rust_decimal = { version = "1.40", features = ["serde-with-str"] }
rust_decimal_macros = "1.40"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Crypto and encoding
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.20", features = ["v4", "serde"] }
url = "2.5"
rand = "0.9"

# Optional WebSocket support for streaming
tokio-tungstenite = { version = "0.28", optional = true, features = ["native-tls"] }
sonic-rs = "0.5.6"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tokio-test = "0.4"
mockito = "1.7"
proptest = "1.10"
env_logger = "0.11"
polymarket-rs-client = "0.1.1"

[features]
default = ["stream"]
stream = ["tokio-tungstenite"]

[[bench]]
name = "book_updates"
harness = false

[[bench]]
name = "fill_processing"
harness = false

[[bench]]
name = "comparison_benchmarks"
harness = false

[[bench]]
name = "network_benchmarks"
harness = false

[[bench]]
name = "ws_hot_path"
harness = false

[profile.release]
# Optimizations for HFT performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation for development
opt-level = 1

[profile.test]
# Optimizations for test performance
opt-level = 2
debug = true 
